[gd_scene load_steps=54 format=2]

[ext_resource path="res://Tilemaps/tileset.png" type="Texture" id=1]
[ext_resource path="res://Art/robot.png" type="Texture" id=2]
[ext_resource path="res://Scripts/player.gd" type="Script" id=3]
[ext_resource path="res://Objects/Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/red_block.png" type="Texture" id=6]
[ext_resource path="res://Art/powerstation.png" type="Texture" id=7]
[ext_resource path="res://Scripts/swappable.gd" type="Script" id=8]
[ext_resource path="res://Scripts/goal.gd" type="Script" id=9]
[ext_resource path="res://Art/powercube.png" type="Texture" id=10]
[ext_resource path="res://Art/pg_counter.png" type="Texture" id=11]
[ext_resource path="res://Scripts/counter.gd" type="Script" id=12]
[ext_resource path="res://Bg/bg_0.png" type="Texture" id=13]
[ext_resource path="res://Bg/bg_9.png" type="Texture" id=14]
[ext_resource path="res://Bg/bg_4.png" type="Texture" id=15]
[ext_resource path="res://Bg/bg_11.png" type="Texture" id=16]
[ext_resource path="res://Bg/bg_12.png" type="Texture" id=17]
[ext_resource path="res://Bg/bg_1.png" type="Texture" id=18]
[ext_resource path="res://Bg/bg_5.png" type="Texture" id=19]
[ext_resource path="res://Bg/bg_7.png" type="Texture" id=20]
[ext_resource path="res://Bg/bg_3.png" type="Texture" id=21]
[ext_resource path="res://Bg/bg_6.png" type="Texture" id=22]
[ext_resource path="res://Bg/bg_13.png" type="Texture" id=23]
[ext_resource path="res://Bg/bg_2.png" type="Texture" id=24]
[ext_resource path="res://Bg/bg_10.png" type="Texture" id=25]
[ext_resource path="res://Bg/bg_14.png" type="Texture" id=26]
[ext_resource path="res://Bg/bg_15.png" type="Texture" id=27]
[ext_resource path="res://Bg/bg_8.png" type="Texture" id=28]
[ext_resource path="res://Scripts/specgoal.gd" type="Script" id=29]
[ext_resource path="res://Art/meter.png" type="Texture" id=30]
[ext_resource path="res://Music/sfx_jump.wav" type="AudioStream" id=31]
[ext_resource path="res://Music/sfx_thud.wav" type="AudioStream" id=33]
[ext_resource path="res://Music/sfx_correct.wav" type="AudioStream" id=34]
[ext_resource path="res://Music/sfx_win.wav" type="AudioStream" id=35]
[ext_resource path="res://Music/sfx_wrong.wav" type="AudioStream" id=36]
[ext_resource path="res://Music/sfx_dead.wav" type="AudioStream" id=37]
[ext_resource path="res://Art/powerstation_2.png" type="Texture" id=38]
[ext_resource path="res://Art/laser.png" type="Texture" id=39]
[ext_resource path="res://Scripts/laser.gd" type="Script" id=40]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 16
frame_0/texture = ExtResource( 13 )
frame_1/texture = ExtResource( 18 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 24 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 21 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 15 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 19 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 22 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 20 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 28 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 14 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 25 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 16 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 17 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 23 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 26 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 27 )
frame_15/delay_sec = 0.0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=10]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tileset.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tileset.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 128, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 7 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tileset.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 128, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 8 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tileset.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 128, 64, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 9 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "tileset.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 128, 128, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "tileset.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 192, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tileset.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 256, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "tileset.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 320, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "tileset.png 12"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 192, 64, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "tileset.png 13"
13/texture = ExtResource( 1 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 256, 64, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "tileset.png 14"
14/texture = ExtResource( 1 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 320, 64, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "tileset.png 15"
15/texture = ExtResource( 1 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 192, 128, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "tileset.png 16"
16/texture = ExtResource( 1 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 256, 128, 64, 64 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "tileset.png 17"
17/texture = ExtResource( 1 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 320, 128, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 80, 80 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 12, 64 )

[sub_resource type="CircleShape2D" id=13]
radius = 12.0

[sub_resource type="CircleShape2D" id=14]
radius = 25.0

[sub_resource type="CapsuleShape2D" id=15]
radius = 12.0
height = 30.0

[node name="Node2D" type="Node2D"]

[node name="Bg" type="TextureRect" parent="."]
margin_top = -960.0
margin_right = 1240.0
margin_bottom = -60.0
texture = SubResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgShader" type="ColorRect" parent="Bg"]
margin_right = 1240.0
margin_bottom = 900.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 10 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( -655360, 536870923, 0, -655359, 536870922, 0, -655358, 536870922, 0, -655357, 536870922, 0, -655356, 536870922, 0, -655355, 536870922, 0, -655354, 536870921, 0, -655353, -2147483645, 0, -655352, 536870916, 0, -655351, 536870916, 0, -655350, 536870916, 0, -655349, 536870916, 0, -655348, 536870916, 0, -655347, 536870916, 0, -655346, 536870916, 0, -655345, 536870916, 0, -655344, 536870916, 0, -655343, 536870916, 0, -655342, 536870916, 0, -655341, 536870915, 0, -589824, 536870926, 0, -589823, 536870925, 0, -589822, 536870920, 0, -589821, 536870925, 0, -589820, 1073741832, 0, -589819, 536870925, 0, -589818, 536870924, 0, -589817, -2147483644, 0, -589806, 1073741831, 0, -589805, -536870908, 0, -524288, 536870929, 0, -524287, 536870928, 0, -524286, 536870928, 0, -524285, 536870928, 0, -524284, 536870928, 0, -524283, 536870928, 0, -524282, 536870927, 0, -524281, 1073741827, 0, -524280, 536870913, 0, -524269, -536870908, 0, -458752, -2147483645, 0, -458751, 536870916, 0, -458750, 536870916, 0, -458749, 536870916, 0, -458748, 536870916, 0, -458747, 536870916, 0, -458746, 536870916, 0, -458745, 536870915, 0, -458744, -2147483644, 0, -458741, -2147483647, 0, -458740, 1073741828, 0, -458739, 536870913, 0, -458733, -536870908, 0, -393216, -1073741820, 0, -393209, 1073741825, 0, -393208, -536870911, 0, -393207, 1073741830, 0, -393206, 1073741830, 0, -393205, 1073741825, 0, -393204, 536870916, 0, -393203, -536870911, 0, -393197, -536870908, 0, -327680, -1073741820, 0, -327665, -2147483647, 0, -327664, 536870914, 0, -327663, 1073741828, 0, -327662, 1073741828, 0, -327661, -536870908, 0, -262144, -1073741820, 0, -262142, 1073741829, 0, -262141, 1073741830, 0, -262140, 1073741830, 0, -262139, 1073741830, 0, -262138, 536870917, 0, -262129, 1073741825, 0, -262128, 1610612738, 0, -262127, 536870916, 0, -262126, 536870916, 0, -262125, -536870908, 0, -196608, -1073741820, 0, -196589, -536870908, 0, -131072, 1073741827, 0, -131071, 536870913, 0, -131053, -2147483646, 0, -65536, 536870915, 0, -65535, 1073741827, 0, -65534, 1610612740, 0, -65533, 1610612740, 0, -65532, 1610612740, 0, -65531, 1610612740, 0, -65530, 1610612740, 0, -65529, 1610612740, 0, -65528, 1610612740, 0, -65527, 1610612740, 0, -65526, 1610612740, 0, -65525, 1610612740, 0, -65524, 1610612740, 0, -65523, 2, 0, -65522, 1610612740, 0, -65521, 1610612740, 0, -65520, 1073741828, 0, -65519, 1073741828, 0, -65518, 1073741828, 0, -65517, -536870909, 0 )

[node name="NoGoZones" type="Node2D" parent="."]

[node name="NoGoBlock" type="StaticBody2D" parent="NoGoZones"]
position = Vector2( 1056, -192 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="NoGoZones/NoGoBlock"]
margin_right = 160.0
margin_bottom = 128.0
input_pass_on_modal_close_click = false
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoGoZones/NoGoBlock"]
position = Vector2( 80, 80 )
shape = SubResource( 11 )

[node name="Laser" type="Area2D" parent="NoGoZones"]
position = Vector2( 1056, -128 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 40 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NoGoZones/Laser"]
rotation = 1.5708
scale = Vector2( 2, 1 )
texture = ExtResource( 39 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoGoZones/Laser"]
shape = SubResource( 12 )

[node name="SpecGoal" type="Area2D" parent="."]
position = Vector2( 1056, -352 )
input_pickable = false
monitorable = false
script = ExtResource( 29 )
__meta__ = {
"_edit_group_": true
}
connect_to = "Laser"

[node name="Sprite" type="Sprite" parent="SpecGoal"]
texture = ExtResource( 38 )
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpecGoal"]
shape = SubResource( 13 )

[node name="sfx_wrong" type="AudioStreamPlayer2D" parent="SpecGoal"]
position = Vector2( 192, 0 )
stream = ExtResource( 33 )

[node name="sfx_active" type="AudioStreamPlayer2D" parent="SpecGoal"]
position = Vector2( 192, 0 )
stream = ExtResource( 31 )

[node name="Boxes" type="Node2D" parent="."]

[node name="Goal" type="Area2D" parent="Boxes"]
position = Vector2( 864, -96 )
input_pickable = false
monitorable = false
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Boxes/Goal"]
texture = ExtResource( 7 )
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxes/Goal"]
shape = SubResource( 13 )

[node name="sfx_active" type="AudioStreamPlayer2D" parent="Boxes/Goal"]
stream = ExtResource( 34 )

[node name="sfx_wrong" type="AudioStreamPlayer2D" parent="Boxes/Goal"]
stream = ExtResource( 36 )

[node name="Goal2" type="Area2D" parent="Boxes"]
position = Vector2( 1184, -96 )
input_pickable = false
monitorable = false
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Boxes/Goal2"]
texture = ExtResource( 7 )
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxes/Goal2"]
shape = SubResource( 13 )

[node name="sfx_wrong" type="AudioStreamPlayer2D" parent="Boxes/Goal2"]
position = Vector2( 864, -192 )
stream = ExtResource( 36 )

[node name="sfx_active" type="AudioStreamPlayer2D" parent="Boxes/Goal2"]
position = Vector2( 864, -192 )
stream = ExtResource( 34 )

[node name="TestObject" type="RigidBody2D" parent="."]
position = Vector2( 224, -288 )
mode = 2
mass = 10.0
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TestObject"]
texture = ExtResource( 10 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestObject"]
shape = SubResource( 14 )

[node name="TestObject2" type="RigidBody2D" parent="."]
position = Vector2( 704, -96 )
mode = 2
mass = 10.0
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TestObject2"]
texture = ExtResource( 10 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestObject2"]
shape = SubResource( 14 )

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( 608, -96 )
mode = 2
mass = 10.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 2 )
hframes = 5
vframes = 6
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 15 )

[node name="RayCast_1" type="RayCast2D" parent="Player"]
position = Vector2( -10, 20 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCast_2" type="RayCast2D" parent="Player"]
position = Vector2( 10, 20 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_bottom = 0
smoothing_enabled = true

[node name="sfx_jump" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 31 )
volume_db = -10.0

[node name="sfx_dead" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 37 )

[node name="sfx_win" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 35 )

[node name="CameraBound" type="Node2D" parent="."]
position = Vector2( 1280, -640 )

[node name="Cursor" parent="." instance=ExtResource( 4 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Sprite" parent="CanvasLayer"]
texture = ExtResource( 11 )
centered = false
hframes = 3
vframes = 4
script = ExtResource( 12 )

[node name="MeterBarBack" type="ColorRect" parent="CanvasLayer"]
margin_left = 730.0
margin_top = 4.0
margin_right = 858.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeterBar" type="ColorRect" parent="CanvasLayer"]
margin_left = 730.0
margin_top = 4.0
margin_right = 858.0
margin_bottom = 30.0
color = Color( 0, 0.784314, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Meter" type="Sprite" parent="CanvasLayer"]
position = Vector2( 725, 0 )
texture = ExtResource( 30 )
centered = false

[node name="Transition" type="ColorRect" parent="CanvasLayer"]
margin_right = 1000.0
margin_bottom = 1000.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="NoGoZones/Laser" to="NoGoZones/Laser" method="_on_body_entered"]
[connection signal="body_entered" from="SpecGoal" to="SpecGoal" method="_on_body_entered"]
[connection signal="body_exited" from="SpecGoal" to="SpecGoal" method="_on_body_exited"]
[connection signal="body_entered" from="Boxes/Goal" to="Boxes/Goal" method="_on_body_entered"]
[connection signal="body_exited" from="Boxes/Goal" to="Boxes/Goal" method="_on_body_exited"]
[connection signal="body_entered" from="Boxes/Goal2" to="Boxes/Goal2" method="_on_body_entered"]
[connection signal="body_exited" from="Boxes/Goal2" to="Boxes/Goal2" method="_on_body_exited"]
